fix: about page text align break line adj
ref: http://fox.designforcode.cc/dearmusik/pm_dearmusik/-/issues/33

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -48,6 +48,7 @@
         height: 676px !important;
         text-align: start !important;
         color: #e6e6e6 !important;
+        text-align: justify !important;
       }
       .imgBoxM {
         // position: relative;
@@ -103,7 +104,7 @@
     font-weight: 500;
     line-height: 1.61;
     letter-spacing: 1.86px;
-    text-align: left;
+    text-align: justify;
     color: #414141;
     margin-left: 46px;
   }
